# rag_from_pdf

./: Dockerfile  Makefile  README.md  Summary.ipynb  main.py  pyproject.toml  requirements.txt
engine/: chatbot.py  retriever.py
files/: documents.json  summaries.txt
tests/: test_system.py
utils/: text_retrieval.py
