[tool.poetry]
name = "rag-from-pdf"
version = "0.1.0"
description = ""
authors = ["payonear <arthur.kolishenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfminer-six = "^20240706"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
